@@ -50,7 +50,9 @@ class DeprecatedHooks {
 		'LinkBegin' => [ 'deprecatedVersion' => '1.28' ],
 		'LinkEnd' => [ 'deprecatedVersion' => '1.28' ],
 		'NewRevisionFromEditComplete' => [ 'deprecatedVersion' => '1.35' ],
+		'PageContentInsertComplete' => [ 'deprecatedVersion' => '1.35', 'silent' => true ],
 		'PageContentSave' => [ 'deprecatedVersion' => '1.35', 'silent' => true ],
+		'PageContentSaveComplete' => [ 'deprecatedVersion' => '1.35', 'silent' => true ],
 		'ParserBeforeTidy' => [ 'deprecatedVersion' => '1.35' ],
 		'ParserFetchTemplate' => [ 'deprecatedVersion' => '1.35' ],
 		'ParserGetVariableValueVarCache' => [ 'deprecatedVersion' => '1.35' ],
